--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,10 @@ dependencies:
   path_provider: ^1.6.7
   font_awesome_flutter: ^8.8.1
   google_maps_flutter: ^0.5.26+4
+  material_segmented_control: ^2.0.11+1
+  image_picker: ^0.6.5+2
+
+
 
 
 
