--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,9 +38,9 @@ dependencies:
   font_awesome_flutter: ^8.8.1
   google_maps_flutter: ^0.5.26+4
   material_segmented_control: ^2.0.11+1
-  image_picker: ^0.6.5+2
+  image_picker: ^0.6.3+1
   animated_text_kit: ^2.0.0
-  rounded_loading_button: ^1.0.4
+  confetti: ^0.4.0
   flip: ^1.0.0
 
 
